tests/module_not_found_errors/module_not_found_errors.exp
Error ----------------------------------------------------------------------------------------------------- index.js:3:9

Cannot resolve module `module_completely_absent`. [cannot-resolve-module]

   3| require('module_completely_absent');
              ^^^^^^^^^^^^^^^^^^^^^^^^^^


Error ----------------------------------------------------------------------------------------------------- index.js:7:9

Cannot resolve module `module_outside_of_root`. [cannot-resolve-module]

   7| require('module_outside_of_root');
              ^^^^^^^^^^^^^^^^^^^^^^^^



Found 2 errors
